[package]
name = "terrain_editor"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.60"
wasm-bindgen = "0.2.83"
bevy="0.12"
bevy_infinite_grid="0.10"
bevy_flycam = "=0.12.0"
bevy_mod_picking = {version = "=0.17.0",features = ["bevy_picking_egui"]}
bevy_egui="0.24"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  'CanvasRenderingContext2d',
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGlVertexArrayObject',
  'WebGl2RenderingContext',
  'WebGlProgram',
  'WebGlShader'
]